# authorization

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
authentication/accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py
authentication/accounts/migrations/: 0001_initial.py
authentication/authentication/: settings.py  urls.py
